[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.69"
thiserror = "1.0.38"
thunderdome = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-test = "0.2.4"
stewart = { path = "./crates/stewart" }
stewart-utils = { path = "./crates/stewart-utils" }
