[workspace]
members = ["crates/*", "examples"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.4"
mio = "0.8.8"
quinn-proto = "0.10.1"
rcgen = "0.11.1"
rustls = "0.21.5"
thiserror = "1.0"
thunderdome = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-test = "0.2.4"
uuid = "1.4"
stewart = { version = "0.10.0-dev", path = "./crates/stewart" }
stewart-http = { version = "0.1.0-dev", path = "./crates/stewart-http" }
stewart-message = { version = "0.1.0-dev", path = "./crates/stewart-message" }
stewart-mio = { version = "0.1.0-dev", path = "./crates/stewart-mio" }
stewart-quic = { version = "0.1.0-dev", path = "./crates/stewart-quic" }
