[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
stewart.workspace = true
stewart-message.workspace = true
stewart-mio.workspace = true
stewart-quic.workspace = true

[[example]]
name = "hello"
path = "hello.rs"

[[example]]
name = "quic_server"
path = "quic_server.rs"

[[example]]
name = "udp_echo"
path = "udp_echo.rs"
