[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
rcgen.workspace = true
rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
stewart.workspace = true
stewart-http.workspace = true
stewart-mio.workspace = true
stewart-quic.workspace = true

[[example]]
name = "hello"
path = "hello.rs"

[[example]]
name = "html_hello"
path = "html_hello.rs"

[[example]]
name = "quic_echo"
path = "quic_echo.rs"

[[example]]
name = "tcp_echo"
path = "tcp_echo.rs"

[[example]]
name = "udp_echo"
path = "udp_echo.rs"
