[package]
name = "stewart-message"
version = "0.1.0-dev"
edition = "2021"
description = "Messaging utilities for stewart"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/stewart"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
stewart.workspace = true
