[package]
name = "stewart-mio"
version = "0.1.0-dev"
edition = "2021"
description = "Mio event loop runner for stewart"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/stewart"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
mio = { workspace = true, features = ["os-poll", "net"] }
thunderdome.workspace = true
tracing.workspace = true
stewart.workspace = true

[dev-dependencies]
devutils.workspace = true
