[package]
name = "stewart-utils"
version = "0.3.0"
edition = "2021"
description = "Small common utilities for stewart"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/stewart"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
stewart.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
