[package]
name = "stewart"
version = "0.3.0"
edition = "2021"
description = "Stewart is a minimalist, high-performance, and non-exclusive actor system"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/stewart"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
thunderdome.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
