[package]
name = "stewart"
version = "0.7.0"
edition = "2021"
description = "A minimalist, high-performance, and non-exclusive actor system"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/stewart"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
thunderdome.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
uuid = { workspace = true, features = ["v4"] }
