[package]
name = "stewart"
version = "0.10.0-dev"
edition = "2021"
description = "Actors, done well"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/stewart"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
thunderdome.workspace = true
tracing.workspace = true

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
devutils.workspace = true
